--- a/pom.xml
+++ b/pom.xml
@@ -50,8 +50,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-parent</artifactId>
-            <version>2.4.0</version>
+            <version>2.4.9</version>
+            <type>pom</type>
         </dependency>
+
         <dependency>
             <groupId>com.vaadin.external.google</groupId>
             <artifactId>android-json</artifactId>
